--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "publish": "node publish.js"
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
@@ -17,6 +18,7 @@
     "css-loader": "^5.2.6",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-to-image": "^1.6.2",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.3.5",
@@ -25,7 +27,6 @@
     "style-loader": "^3.0.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "gh-pages": "^3.2.3"
+    "webpack-dev-server": "^3.11.2"
   }
 }
