--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "html-to-image": "^1.6.2",
+    "html-webpack-partials-plugin": "^0.8.0",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.0",
